fixed dark mode bug with list.html
issue with enabling light mode in list.html causing the text for dark mode to be displayed if the page is left and reopened, only fixed by clearing application cache inside dev tools, no longer an issue.

--- a/static/css/list.css
+++ b/static/css/list.css
@@ -2,8 +2,8 @@ h3 a {
   color: #c9c9c9;
   text-decoration: none;
 }
-h3 a.lightmode {
-  color: #383838;
+.light-mode {
+  color: #383838 !important;
   text-decoration: none;
 }
 
